# PolygonSplitter

./: README.md  app.py  pyproject.toml
data/: room.geojson
src/: split_polygon.py
