[tool.poetry]
name = "polygonsplitter"
version = "0.1.0"
description = ""
authors = ["fengsh <shaohong.feng.78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.3"
geojson = "^3.1.0"
matplotlib = "^3.8.3"
geopandas = "^0.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
